feat: add user registers and user login with Spring Security and JWT
