# docs/openAPI.yml
@@ -22,14 +22,27 @@ paths:
               properties:
                 username:
                   type: string
-                password:
-                  type: string
                 email:
                   type: string
+                password:
+                  type: string
+                firstName:
+                  type: string
+                lastName:
+                  type: string
+                age:
+                  type: integer
       responses:
-        '201':
+        '200':
           description: Usuario registrado exitosamente
-        '400':
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+        '403':
           description: Solicitud incorrecta
 
   /api/auth/login:
@@ -57,7 +70,7 @@ paths:
                 properties:
                   token:
                     type: string
-        '401':
+        '403':
           description: Credenciales inválidas
 
   /api/auth/logout:
